deployments/gateway-api/pattern2-multimodel/manifests/routing/httproute-unified.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-d-multi-model-inference
  namespace: llm-d
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: infra-pattern1-inference-gateway
  rules:
    - backendRefs:
      - group: inference.networking.k8s.io
        kind: InferencePool
        name: gaie-pattern1
        port: 54321
      matches:
      - path:
          type: PathPrefix
          value: /
